# Scrutin

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  README.md  SETUP.md  pyproject.toml  regression_results.txt  requirements.txt  scratch_test_runner_remaining.py
.agents/workflows/: verify-phase.md
Docs/: SETUP_GUIDE.md
app/: __init__.py  cli.py
app/agents/: adversarial_agent.py  base.py  credibility_agent.py  decomposition_agent.py  evidence_agent.py  forensics_agent.py  orchestrator_agent.py
app/evaluation/: calibration.py
app/memory/: episodic.py  longterm.py  migrations.py  semantic.py
app/orchestrator/: evaluator.py  loop.py  planner.py
app/protocols/: blackboard.py  messages.py
app/tools/: provenance_tools.py  reference_tools.py  registry.py  search_tools.py
app/utils/: env_validator.py  logger.py  rate_limiter.py
backend/: .env.example  .gitignore  Dockerfile.backend  README.md  railway.toml  requirements.txt
backend/.agents/: AGENTS.md
backend/app/: api.py  cli.py  server.py
backend/app/agents/: adversarial_agent.py  (+2 more)
backend/tests/: conftest.py  test_agents.py  test_concurrent.py  test_memory.py  test_registry.py  test_search_tools.py
docs/: agent-system-prompts.md  blackboard-schemas.md  database-schema.md  evaluation-and-calibration-plan.md  misinfo-verification-architecture.md  tool-integration-spec.md
frontend/: Dockerfile.frontend  pnpm-lock.yaml
tests/: conftest.py  test_memory_integration.py  test_orchestrator_loop.py  test_protocols.py  test_provenance.py  test_search_tools.py
tests/fixtures/: ground_truth.py
(+44 files in other folders)
